<resources>
    <string name="app_name">Voice Assistant</string>
    <string name="response_yes">Yes</string>
    <string name="response_no">No</string>
    <string name="response_other">Other</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_query_default">User Feedback Query</string>
    <string name="user_query_default">Defaull User Query</string>
    <string name="user_query_title">User Query :</string>
    <string name="feedback_query_title">Query :</string>
    <string name="feedback_title">Feedback</string>
    <string name="submit">Submit</string>
    <string name="pfiva_user_query_title">User Query :</string>
    <string name="feedback_available">Feedback Available</string>
    <string name="feedback_not_available">Feedback Not Available</string>
    <string name="hotword_title">Hotword :</string>
    <string name="timestamp_title">Timestamp :</string>
    <string name="intent_title">Intent :</string>
    <string name="empty_string">---</string>
    <string name="detailed_user_query">Query Details</string>
    <string name="not_available">Not Available</string>
    <string name="user_response_title">User Response :</string>
    <string name="detailedAct_feedback_query_title">Query :</string>
    <string name="message_title">Message :</string>
    <string name="default_message">Default Message</string>
    <string name="response">Response</string>
    <string name="instructions_title">Instructions</string>
    <string name="start_instructions">
        This survey is being conducted to analyze the performance of our platform for intelligent voice assistants.
    </string>
    <string name="middle_instructions">
        The questions could be of type :\n
        &#8226; Text \n
        &#8226; Single Choice \n
        &#8226; Multiple Choice \n
    </string>
    <string name="end_instructions">
        By starting the survey you allow us to store your responses for study purpose.
    </string>
    <string name="start_survey">Start</string>
    <string name="pfiva_survey">PFIVA Survey</string>
    <string name="default_question_number">1</string>
    <string name="response_title">Response</string>
    <string name="survey_confirmation">
        Thank you for taking the time to complete this survey.
        We truly value the information you have provided.
        Your responses will contribute to our analysis of our platform for intelligent voice assistants.
    </string>
</resources>
