<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Feedback Query Components -->
    <LinearLayout
        android:id="@+id/feedback_query_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_query_title" />

        <TextView
            android:id="@+id/feedback_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/feedback_query_default"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- Intent Feedback Query Components -->
    <LinearLayout
        android:id="@+id/intent_feedback_button_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <Button
            android:id="@+id/feedback_response_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response_yes" />

        <Button
            android:id="@+id/feedback_response_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response_other" />
    </LinearLayout>

    <!-- Feedback Components -->
    <LinearLayout
        android:id="@+id/intent_feedback_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_title"/>

        <EditText
            android:id="@+id/feedback_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/feedback_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_submit"/>
    </LinearLayout>
</LinearLayout>