<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.DetailedActivity">

    <LinearLayout
        android:id="@+id/detailedAct_user_query_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/detailedAct_user_query_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pfiva_user_query_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detailedAct_user_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/detailedAct_hotward_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotword_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailedAct_hotword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/empty_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/detailedAct_timestamp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timestamp_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailedAct_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/detailedAct_intent_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailedAct_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/empty_string" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <LinearLayout
            android:id="@+id/detailedAct_user_feedback_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/detailedAct_user_feedback_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback_title"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/detailedAct_feedback_query_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detailedAct_feedback_query_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailedAct_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/empty_string" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/detailedAct_user_response_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_response_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailedAct_user_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/detailedAct_feedback_timestamp_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timestamp_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detailedAct_feedback_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:text="@string/empty_string" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>