<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Instructions container -->
    <LinearLayout
        android:id="@+id/instructions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

    <!-- Questions container -->
    <LinearLayout
        android:id="@+id/questions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/survey_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- Text Option container -->
    <LinearLayout
        android:id="@+id/text_options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/response_title"/>

        <EditText
            android:id="@+id/response_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <!-- Multiple Choice Options Container -->
    <LinearLayout
        android:id="@+id/mc_options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp">

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </RadioGroup>
    </LinearLayout>

    <!-- Checkbox Option Container -->
    <LinearLayout
        android:id="@+id/checkbox_option_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp">

    </LinearLayout>

    <!-- Confirmation container -->
    <LinearLayout
        android:id="@+id/confirmation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey_confirmation"
            />
    </LinearLayout>

    <!-- Buttons container -->
    <RelativeLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/start_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_survey"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/submit_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:paddingBottom="20dp"
            android:text="@string/default_question_number" />

        <ImageButton
            android:id="@+id/next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_forward"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"/>

        <ImageButton
            android:id="@+id/previous_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backward"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>
    </RelativeLayout>

</LinearLayout>